force-app/main/default/objects/Author__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Contact__r.MailingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>