force-app/main/default/objects/Author__c/fields/Contact_Matched__c.field-meta.xml
<CustomField>
    <fullName>Contact_Matched__c</fullName>
    <formula>NOT(ISBLANK(Contact__c))</formula>
    <label>Contact Matched</label>
    <type>Checkbox</type>
</CustomField>