force-app/main/default/objects/Author__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Contact__r.MailingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>