force-app/main/default/objects/Author__c/fields/New_Author_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Author_Email__c</fullName>
    <label>New Author Email</label>
    <type>Email</type>
</CustomField>